<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/margin_large">

    <TextView
        android:id="@+id/authenticationHeaderTextView"
        style="@style/DialogTitleTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_authentication_title"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authenticationDescriptionTextView"
        style="@style/DialogBodyTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/dialog_authentication_description"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authenticationHeaderTextView" />

    <Button
        android:id="@+id/authenticationContinueButton"
        style="@style/DialogButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/dialog_okay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/authenticationCancelButton"
        app:layout_constraintTop_toBottomOf="@id/authenticationDescriptionTextView" />

    <Button
        android:id="@+id/authenticationCancelButton"
        style="@style/DialogButtonTheme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/dialog_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/authenticationDescriptionTextView" />
</androidx.constraintlayout.widget.ConstraintLayout>